Back to the ancient times! It's now using JDK 1.8